--- a/.github/workflows/pytest_testing_pymc3.yml
+++ b/.github/workflows/pytest_testing_pymc3.yml
@@ -1,4 +1,4 @@
-name: Pytest Testing
+name: Pytest Testing with PyMC3
 on:
   pull_request:
     types: [opened,reopened,synchronize]
@@ -24,7 +24,8 @@ jobs:
       - name: Setup Environment
         run: |
           python -m pip install --upgrade pip
-          pip install .[jwst,hst,test]
+          pip install .[hst,pymc3,test]
+          conda install mkl-service
           mkdir $HOME/crds_cache
           echo "CRDS_PATH=$HOME/crds_cache" >> $GITHUB_ENV
           echo "CRDS_SERVER_URL=https://jwst-crds.stsci.edu" >> $GITHUB_ENV
@@ -32,3 +33,12 @@ jobs:
         run: pip show eureka
       - name: Run tests, generate coverage report
         run: pytest tests --cov=./src/eureka --cov-report=xml
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v4
+        with:
+          env_vars: OS,PYTHON
+          files: ./coverage.xml
+          fail_ci_if_error: true
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
