--- a/.github/workflows/pytest_testing_pymc3.yml
+++ b/.github/workflows/pytest_testing_pymc3.yml
@@ -20,7 +20,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.10
+          python-version: '3.10.14'
       - name: Setup Environment
         run: |
           python -m pip install --upgrade pip
