--- a/setup.cfg
+++ b/setup.cfg
@@ -41,11 +41,11 @@ install_requires =
     lmfit
     matplotlib>=3.6 # Lower limit needed for set_layout_engine()
     mc3 # Needed for uncertainties in the Allan variance plots in S5
-    numpy>=1.20.0,<1.25 # Upper limit needed to avoid deprecations
+    numpy>=1.20.0,<1.25 # Upper limit needed for Apple silicon
     pandas
     photutils
     requests
-    scipy>=1.4.0 # Lower limit needed for scipy.fft
+    scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
     setuptools_scm
     stdatamodels
     svo_filters
@@ -89,8 +89,9 @@ pymc3 =
     opencv-python-headless<4.8 # Upper limit needed for numpy<1.22
     xarray<2023.10.0 # Upper limit needed for numpy<1.22
 jupyter =
-    jupyter
     ipykernel
+    ipython
+    jupyter
 
 
 [flake8]
