--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ install_requires =
     mc3 # Needed for uncertainties in the Allan variance plots in S5
     numpy>=1.20.0,<1.25 # Upper limit needed for Apple silicon
     pandas
-    pastasoss
+    pastasoss>=1.2.1
     photutils
     requests
     scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
