--- a/environment.yml
+++ b/environment.yml
@@ -45,7 +45,7 @@ dependencies:
         - fleck
         - image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
         - jwst==1.15.1
-        - mc3 # Needed for uncertainties in the Allan variance plots in S5
+        - mc3 # Needed for uncertainties in the Pont time-averaging plots in S5
         - myst-parser # Needed for documentation
         - numpy>=1.20.0,<=1.23 # Upper limit needed for Apple silicon and for theano, starry, and pymc3
         - scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
