--- a/setup.cfg
+++ b/setup.cfg
@@ -28,12 +28,12 @@ install_requires =
     astropy
     astroquery
     batman-package
-    bokeh<3.0
+    bokeh
     catwoman@git+https://github.com/KathrynJones1/catwoman@master
     ccdproc
     celerite2 # Needed for GP
     corner
-    crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
+    crds
     dynesty>1.0 # Lower limit needed for specific arguments
     emcee>3.0.0 # Lower limit needed for specific arguments
     exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
@@ -43,7 +43,7 @@ install_requires =
     lmfit
     matplotlib>=3.6 # Lower limit needed for set_layout_engine()
     mc3 # Needed for uncertainties in the Allan variance plots in S5
-    numpy>=1.20.0,<1.25 # Upper limit needed for Apple silicon
+    numpy>=1.20.0
     pandas
     pastasoss>=1.2.2 # Lower limit needed to allow for support with pymc3
     photutils
