--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     h5py
     lmfit
     matplotlib>=3.6 # Lower limit needed for set_layout_engine()
-    mc3 # Needed for uncertainties in the Pont time-averaging plots in S5
+    mc3 # Needed for uncertainties in the RMS time-averaging plots in S5
     numpy>=1.20.0,<1.25 # Upper limit needed for Apple silicon
     pandas
     pastasoss>=1.2.2 # Lower limit needed to allow for support with pymc3
