--- a/.github/workflows/pytest_testing.yml
+++ b/.github/workflows/pytest_testing.yml
@@ -32,3 +32,12 @@ jobs:
         run: pip show eureka
       - name: Run tests, generate coverage report
         run: pytest tests --cov=./src/eureka --cov-report=xml
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v4
+        with:
+          env_vars: OS,PYTHON
+          files: ./coverage.xml
+          fail_ci_if_error: true
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
