--- a/environment.yml
+++ b/environment.yml
@@ -49,7 +49,7 @@ dependencies:
         - myst-parser # Needed for documentation
         - numpy>=1.20.0
         - pastasoss>=1.2.2
-        # - planet-harmonica # for python 3.8 -- 3.10
+        # - planet-harmonica # Currently only supports for python 3.8 -- 3.10
         - planet-harmonica@git+https://github.com/DavoGrant/harmonica@main
         - scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
         - setuptools_scm # Needed for version number
