--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ install_requires =
     pandas
     pastasoss>=1.2.2 # Lower limit needed to allow for support with pymc3
     photutils
-    # planet-harmonica
+    # planet-harmonica # Currently only supports for python 3.8 -- 3.10
     planet-harmonica@git+https://github.com/DavoGrant/harmonica@main
     requests
     scipy>=1.12.0 # Lower limit needed for stcal.ramp_fitting.likely_fit
