--- a/.github/workflows/pytest_testing.yml
+++ b/.github/workflows/pytest_testing.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Environment
         run: |
           python -m pip install --upgrade pip
-          pip install .[jwst,hst,test]
+          pip install .[jwst,hst,test,jax]
           mkdir $HOME/crds_cache
           echo "CRDS_PATH=$HOME/crds_cache" >> $GITHUB_ENV
           echo "CRDS_SERVER_URL=https://jwst-crds.stsci.edu" >> $GITHUB_ENV
